# cargo-cmake-test

./: .gitignore  .gitignore.orig  Cargo.toml  build.rs
libhello/: CMakeLists.txt  hello.c
src/: main.rs
