[package]
name = "cargo-cmake-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository = "git@github.com:Intoxicoded/cargo-cmake-test.git"
license_file = "LICENSE"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cmake = "0.1.50"